Small problems added, more log files, fixed underlying-MDP value iteration bug, reduce getDoneAction's time, move to java version 11